# badgl-engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.bat  build.sh  config.sh  run.bat  run.sh
example/: .clangd  CMakeLists.txt  game.c  game.h  main.c
example/res/: belfast.xcf  sources.txt
example/res/chicken/: chicken.mtl
inc/: shader.h  texture.h  util.h  window.h
include/: bo.h  camera.h  mesh.h  renderer.h  shader.h  texture.h  util.h  window.h
shaders/: default.frag  default.vert  light.frag  light.glsl  light.vert  model.frag  model.vert  model_default.frag  model_default.vert  model_tex.frag  model_tex.vert  phong.frag  phong.vert  phong_cubemap.frag  phong_cubemap.vert  quad.frag  quad.glsl  quad.vert  shader.frag  shader.vert  skybox.frag  skybox.glsl  skybox.vert  sphere.frag  sphere.vert
shaders/include/: defines.glsl  phong_lighting.glsl  phong_types.glsl
src/: .clangd  arena.c  arena_alloc.c  bgl_math.c  bo.c  camera.c  glmath.c  light.c  log.c  main.c  material.c  mesh.c  model.c  platform.c  platform_linux.c  platform_win32.c  quad.c  renderer.c  scene.c  shader.c  shader_parser.c  shapes.c  skybox.c  sphere.c  texture.c  util.c  vao.c  window.c
src/include/: arena.h  arena_alloc.h  badgl.h  bgl_math.h  bo.h  camera.h  defines.h  force_dgpu.h  glmath.h  light.h  log.h  material.h  mesh.h  model.h  platform.h  quad.h  renderer.h  scene.h  shader.h  shader_parser.h  shapes.h  skybox.h  sphere.h  texture.h  transform.h  types.h  util.h  vao.h  window.h
src/include/ecs/: components.h  ecs.h  entity.h
